# SeminarFelder

./: .gitignore  .gitignore.swp  README.md
anschlag/: .gitignore  Makefile  felder.tex  qrcode.tex
buch/: .gitignore  Makefile  SeminarFelder.idx  SeminarFelder.run.xml  SeminarFelder.tex  SeminarFelder.toc  buch.dvi  buch.fdb_latexmk  buch.fls  buch.out  buch.out.ps  buch.synctex(busy)  buch.tex  chapter.tex  paper.out  paper.tex  papername.tex
buch/chapters/: Makefile.inc  part1.tex  references.bib  vorwort.tex
buch/common/: Makefile-paper.inc  chaptername.tex  content.tex  macros.tex  packages.tex  teilnehmer.tex  titlepage.tex
buch/papers/: uebersicht.tex
buch/papers/rossby/src/: basics.ipynb  dash_app.py  main.py  plot.py  plot_matplotlib.py  pyproject.toml  requirements.txt  rossby.py  testing.ipynb  vorticity.ipynb  weather_data.ipynb
buch/papers/rossby/src/data/: data_2010_7_20_12:00_200.nc  data_2010_7_21_12:00_200.nc
buch/papers/rossby/src/p5.js/templates/: index.html
buch/papers/rossby/src/static/: globe.js
buch/test/: Makefile.inc  aufgaben1.tex  aufgaben2.tex  aufgaben3.tex
buch/tools/: splitpapers
cover/: Makefile  buchcover.tex  front.fdb_latexmk  front.fls  front.tex  lncover.tex  ruecken1.tex  ruecken2.tex  teilnehmer.tex
vorlesungen/: .gitignore
vorlesungen/00_thumbnails/: common.tex
vorlesungen/01_intro/: slides.tex
vorlesungen/03_green/: Makefile  MathSem-03-green.tex  common.tex  green-handout.tex  slides.tex
vorlesungen/04_aeusserealgebra/: Makefile  MathSem-04-aeusserealgebra.tex  aeusserealgebra-handout.tex  (+2 more)
(+763 files in other folders)
