[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartopy>=0.25.0",
    "cdsapi>=0.7.6",
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.3",
    "h5netcdf>=1.6.4",
    "ipykernel>=6.30.1",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.5",
    "netcdf4>=1.7.2",
    "numpy>=2.3.2",
    "plotly>=6.2.0",
    "pyqt5>=5.15.11",
    "xarray>=2025.7.1",
]
